--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -1,33 +1,67 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Service
+metadata:
+  name: mysql-headless
+  namespace: expense
+spec:
+  clusterIP: None
+  selector:
+    component: mysql
+    project: expense
+    tier: db
+  ports:
+  - protocol: TCP
+    port: 3306 #service port
+    targetPort: 3306 #Target port
+---
+apiVersion: v1
+kind: Service
 metadata:
   name: mysql
   namespace: expense
 spec:
-  storageClassName: "expense-ebs" #SC created name.
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 4Gi
----   
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: nginx-dynamic
-#   labels:
-#     purpose: ebs-dynamic
-#     project: expense
-# spec:
-#   containers:
-#   - name: nginx
-#     image: nginx
-#     volumeMounts:
-#     - name: persistent-storage
-#       mountPath: /usr/share/nginx/html
-#   nodeSelector:
-#     topology.kubernetes.io/zone: us-east-1a   
-#   volumes:
-#   - name: persistent-storage
-#     persistentVolumeClaim:
-#       claimName: ebs-dynamic # PVC name   
+  selector:
+    component: mysql
+    project: expense
+    tier: db
+  ports:
+  - protocol: TCP
+    port: 3306 #service port
+    targetPort: 3306 #Target port
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: mysql
+  namespace: expense
+spec:
+  selector:
+    matchLabels:
+      component: mysql
+      project: expense
+      tier: db 
+  serviceName: "mysql-headless"
+  replicas: 2 # by default is 1
+  template:
+    metadata:
+      labels:
+        component: mysql
+        project: expense
+        tier: db 
+    spec:
+      containers:
+      - name: mysql
+        image: narendranreddy/mysql:v1.0
+        imagePullPolicy: Always  
+        volumeMounts:
+        - name: mysql
+          mountPath: /var/lib/mysql
+  volumeClaimTemplates:
+  - metadata:
+      name: mysql    
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "expense-ebs"
+      resources:
+        requests:
+          storage: 1Gi    
